// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reports expect to render emptystate 1`] = `
<Fragment>
  <ReportsHeader />
  <StateViewWithError
    stateValues={
      {
        "data": {
          "profiles": {
            "edges": [],
          },
        },
        "error": undefined,
        "loading": undefined,
      }
    }
  >
    <StateViewPart
      stateKey="loading"
    >
      <section
        className="pf-c-page__main-section"
      >
        <SkeletonTable
          colSize={3}
          rowSize={10}
        />
      </section>
    </StateViewPart>
    <StateViewPart
      stateKey="data"
    >
      <section
        className="pf-c-page__main-section"
      >
        <ReportsEmptyState />
      </section>
    </StateViewPart>
  </StateViewWithError>
</Fragment>
`;

exports[`Reports expect to render loading 1`] = `
<Fragment>
  <ReportsHeader />
  <StateViewWithError
    stateValues={
      {
        "data": undefined,
        "error": false,
        "loading": true,
      }
    }
  >
    <StateViewPart
      stateKey="loading"
    >
      <section
        className="pf-c-page__main-section"
      >
        <SkeletonTable
          colSize={3}
          rowSize={10}
        />
      </section>
    </StateViewPart>
    <StateViewPart
      stateKey="data"
    >
      <section
        className="pf-c-page__main-section"
      >
        <ReportsEmptyState />
      </section>
    </StateViewPart>
  </StateViewWithError>
</Fragment>
`;

exports[`Reports expect to render without error 1`] = `
<Fragment>
  <ReportsHeader />
  <StateViewWithError
    stateValues={
      {
        "data": {
          "profiles": {
            "edges": [
              {
                "node": {
                  "businessObjective": {
                    "id": "1",
                    "title": "BO 1",
                  },
                  "complianceThreshold": 1,
                  "compliantHostCount": 1,
                  "description": "profile description",
                  "id": "1",
                  "name": "profile1",
                  "refId": "121212",
                  "testResultHostCount": 1,
                },
              },
            ],
          },
        },
        "error": undefined,
        "loading": undefined,
      }
    }
  >
    <StateViewPart
      stateKey="loading"
    >
      <section
        className="pf-c-page__main-section"
      >
        <SkeletonTable
          colSize={3}
          rowSize={10}
        />
      </section>
    </StateViewPart>
    <StateViewPart
      stateKey="data"
    >
      <section
        className="pf-c-page__main-section"
      >
        <ReportsTable
          profiles={
            [
              {
                "businessObjective": {
                  "id": "1",
                  "title": "BO 1",
                },
                "complianceThreshold": 1,
                "compliantHostCount": 1,
                "description": "profile description",
                "id": "1",
                "name": "profile1",
                "refId": "121212",
                "testResultHostCount": 1,
              },
            ]
          }
        />
      </section>
    </StateViewPart>
  </StateViewWithError>
</Fragment>
`;
